# contemporary-qml

./: CMakeLists.txt
.github/workflows/: android.yml  linux-appimage.yml  win.yml
controls/: CMakeLists.txt
controls/com/vicr123/Contemporary/: AboutSurface.qml  ActionBar.qml  ActionBarTabber.qml  Admonition.qml  CMakeLists.txt  ContemporaryStackView.qml  ContemporaryWindow.qml  ContemporaryWindowSurface.qml  DialogBox.qml  ErrorFlasher.qml  ExampleControl.qml  Grandstand.qml  Interstitial.qml  Layer.qml  LayerCalculator.qml  MenuSection.qml  NativeMenuBar.qml  Pager.qml  RemoteDeviceButton.qml  SubtitleLabel.qml  SwipeAction.qml  contemporarycontrolsqmlplugin.cpp  contemporarycontrolsqmlplugin.h  safezone.cpp  safezone.h
controls/com/vicr123/Contemporary/CoreStyles/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  ComboBox.qml  Drawer.qml  GroupBox.qml  IconBundler.cmake  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  ScrollBar.qml  ScrollView.qml  Slider.qml  SpinBox.qml  Switch.qml  TextArea.qml  TextField.qml  Tumbler.qml  colors.json  contemporaryinitialisation.cpp  contemporaryinitialisation.h  contemporarystyle.cpp  contemporarystyle.h  contemporarystyleplugin.cpp  contemporarystyleplugin.h  layercalculator.cpp
controls/com/vicr123/Contemporary/CoreStyles/platform/: contemporarydummyplatform.cpp  contemporarydummyplatform.h  contemporarymacplatform.h  contemporarymacplatform.mm  contemporaryqmlplatform.cpp  contemporaryqmlplatform.h
controls/com/vicr123/Contemporary/impl/: ActionBarPopup.qml  ActionBarPopupMenu.qml  ButtonBackground.qml  CMakeLists.txt  FocusDecoration.qml  JobButton.qml  JobPopup.qml  StandardJobComponent.qml  TransitionFade.qml  TransitionLift.qml  TransitionSlide.qml  WindowControls.qml  contemporaryapplication.cpp  contemporaryapplication.h  contemporaryimplstyleplugin.cpp  contemporaryimplstyleplugin.h  contemporarywindowplatform.cpp  contemporarywindowplatform.h  jobmodel.cpp  jobmodel.h  layercalculator.h  nativewindowbutton-mac.mm  nativewindowbutton.cpp  nativewindowbutton.h  qmllayercalculator.cpp  qmllayercalculator.h
cppextensions/: CMakeLists.txt
playground/: .contemporary.json  CMakeLists.txt  Info.plist.in  Main.qml  com.vicr123.contemporary.playground.desktop  com.vicr123.contemporary.playground_blueprint.desktop  jobspanecontroller.cpp  jobspanecontroller.h  main.cpp
playground/android/: AndroidManifest.xml
playground/android/src/com/vicr123/contemporary/playground/: Activity.java
playground/components/: Admonitions.qml  Buttons.qml  CheckboxesRadioButtons.qml  ComboBoxPage.qml  Progress.qml  Ranges.qml  Root.qml  Scrollable.qml  TextInput.qml  TumblerPage.qml
playground/pages/: Buttons.qml  CheckboxesRadioButtons.qml  ComboBoxPage.qml  Progress.qml  Ranges.qml  Scrollable.qml  TextInput.qml  TumblerPage.qml
playground/patterns/: DialogBoxes.qml  Jobs.qml  Root.qml
playground/translations/: en_US.ts
playground/translations/desktop/com.vicr123.contemporary.playground/: en.json
playground/translations/desktop/com.vicr123.contemporary.playground_blueprint/: en.json
